# MinecraftClone

./: .gitignore  README.md
minecraft_clone/: CMakeLists.txt
minecraft_clone/src/: camera.c  camera.h  main.c
